--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "q": "^1.4.1",
     "xml2js": "^0.4.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.2.2",
+    "eslint-config-defaults": "^9.0.0"
+  },
   "optionalDependencies": {}
 }
