--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "https": "^1.0.0",
     "js2xmlparser": "^0.1.7",
     "lodash": "^4.11.1",
     "node-uuid": "^1.4.2",
